samples/_failures_safe/1761477325_0028dd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6f336e10.c: In function ‘main’:
./samples/SAFE/__tmp_6f336e10.c:140: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_6f336e10.c:139:5: error: expected declaration or statement at end of input
  139 |     for
      |     ^~~
